src/test/resources/parse/reject/declarationAfterIdStatement.ul
int bar ()
{
    int id1;

    id1;

    int id2;
}
